EMP-186: Added pagination and udated search return to include pagination stats
EMP-186: Added pagination and udated search return to include pagination stats
