# data-api/open-api-specification.yml
@@ -62,13 +62,30 @@ paths:
             maxLength: 6
             pattern: "([0-9A-Za-z]){4,6}"
             example: '0X12YZ'
+        - name: 'page'
+          in: 'query'
+          required: false
+          schema:
+            default: 0
+            type: integer
+            minimum: 0
+            example: 0
+        - name: 'perPage'
+          in: 'query'
+          required: false
+          schema:
+            default: 10
+            type: integer
+            minimum: 10
+            maximum: 100
+            example: 20
       responses:
         '200':
           description: 'Success'
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/SearchResultsDTO"
+                $ref: "#/components/schemas/SearchDTO"
         '400':
           description: 'Bad request'
         '401':
@@ -160,13 +177,30 @@ paths:
             maxLength: 6
             pattern: "([0-9A-Za-z]){4,6}"
             example: '0X12YZ'
+        - name: 'page'
+          in: 'query'
+          required: false
+          schema:
+            default: 0
+            type: integer
+            minimum: 0
+            example: 0
+        - name: 'perPage'
+          in: 'query'
+          required: false
+          schema:
+           default: 10
+           type: integer
+           minimum: 10
+           maximum: 100
+           example: 20
       responses:
         '200':
           description: 'Success'
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/SearchResultsDTO"
+                $ref: "#/components/schemas/SearchDTO"
         '400':
           description: 'Bad request'
         '401':
@@ -178,10 +212,17 @@ paths:
 
 components:
   schemas:
-    SearchResultsDTO:
-      type: array
-      items:
-        $ref: "#/components/schemas/CrmFormsDTO"
+    SearchDTO:
+      type: 'object'
+      properties:
+        searchResultsDTO:
+          type: array
+          items:
+            $ref: "#/components/schemas/CrmFormsDTO"
+        page:
+          type: integer
+        perPage:
+          type: integer
 
     CrmFormsDTO:
       type: 'object'
