# equinity-historical-data/src/main/java/uk/gov/justice/laa/crime/equinity/historicaldata/archive/controller/SearchArchiveController.java
@@ -3,32 +3,24 @@ package uk.gov.justice.laa.crime.equinity.historicaldata.archive.controller;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
-import uk.gov.justice.laa.crime.equinity.historicaldata.archive.mapper.CrmFormsArchiveMapper;
 import uk.gov.justice.laa.crime.equinity.historicaldata.archive.service.SearchArchiveService;
 import uk.gov.justice.laa.crime.equinity.historicaldata.config.CrmFormSearchCriteriaDTO;
 import uk.gov.justice.laa.crime.equinity.historicaldata.generated.api.SearchArchiveApi;
-import uk.gov.justice.laa.crime.equinity.historicaldata.generated.dto.CrmFormsDTO;
-
-import java.util.List;
+import uk.gov.justice.laa.crime.equinity.historicaldata.generated.dto.SearchDTO;
 
 @RestController
 @RequiredArgsConstructor
 public class SearchArchiveController implements SearchArchiveApi {
-    private final CrmFormsArchiveMapper searchResultsMapper;
-    private final SearchArchiveService archiveService;
-
+    private final SearchArchiveService searchService;
 
     @Override
-    public ResponseEntity<List<CrmFormsDTO>> doSearchArchiveBy(String usn, String client, String clientDoB, String submittedFrom, String submittedTo, String providerAccount) {
+    public ResponseEntity<SearchDTO> doSearchArchiveBy(String usn, String client, String clientDoB, String submittedFrom, String submittedTo, String providerAccount, Integer page, Integer perPage) {
         CrmFormSearchCriteriaDTO crmFormSearchCriteriaDTO = new CrmFormSearchCriteriaDTO(
-                usn, client, clientDoB, submittedFrom, submittedTo, providerAccount
+                usn, client, clientDoB, submittedFrom, submittedTo, providerAccount, null, null
         );
-        crmFormSearchCriteriaDTO.validate();
 
         return ResponseEntity.ok(
-            searchResultsMapper.getDTOsFromModel(
-                archiveService.searchAllByCriteria(crmFormSearchCriteriaDTO)
-            )
+                searchService.searchAllByCriteria(crmFormSearchCriteriaDTO)
         );
     }
 }
