# equinity-historical-data/src/main/java/uk/gov/justice/laa/crime/equinity/historicaldata/controller/SearchController.java
@@ -5,29 +5,22 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import uk.gov.justice.laa.crime.equinity.historicaldata.config.CrmFormSearchCriteriaDTO;
 import uk.gov.justice.laa.crime.equinity.historicaldata.generated.api.SearchApi;
-import uk.gov.justice.laa.crime.equinity.historicaldata.generated.dto.CrmFormsDTO;
-import uk.gov.justice.laa.crime.equinity.historicaldata.mapper.CrmFormsViewMapper;
+import uk.gov.justice.laa.crime.equinity.historicaldata.generated.dto.SearchDTO;
 import uk.gov.justice.laa.crime.equinity.historicaldata.service.SearchService;
-
-import java.util.List;
 
 @RestController
 @RequiredArgsConstructor
 public class SearchController implements SearchApi {
     private final SearchService searchService;
-    private final CrmFormsViewMapper searchResultsMapper;
 
     @Override
-    public ResponseEntity<List<CrmFormsDTO>> doSearchBy(String usn, String client, String clientDoB, String submittedFrom, String submittedTo, String providerAccount) {
+    public ResponseEntity<SearchDTO> doSearchBy(String usn, String client, String clientDoB, String submittedFrom, String submittedTo, String providerAccount, Integer page, Integer perPage) {
         CrmFormSearchCriteriaDTO crmFormSearchCriteriaDTO = new CrmFormSearchCriteriaDTO(
-          usn, client, clientDoB, submittedFrom, submittedTo, providerAccount
+                usn, client, clientDoB, submittedFrom, submittedTo, providerAccount, null, null
         );
-        crmFormSearchCriteriaDTO.validate();
 
         return ResponseEntity.ok(
-            searchResultsMapper.getDTOsFromModel(
                 searchService.searchAllByCriteria(crmFormSearchCriteriaDTO)
-            )
         );
     }
 }
